{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 203,
  "lineage": "e52fdd54-d24c-928b-6767-ae65eee43276",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e66021c377d8c8b4",
            "arn": "arn:aws:ec2:eu-west-1:721151659829:instance/i-07b1d6f8089565d4b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdh",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-038e98ca8715766d3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-role",
            "id": "i-07b1d6f8089565d4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03e65191c5675f3c0",
            "private_dns": "ip-10-0-1-48.eu-west-1.compute.internal",
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-54-170-22-108.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.170.22.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8d7da4c133340b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ecd3731df1dc58e",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d4e9794fd1017830"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins-role",
            "aws_security_group.jenkins-securitygroup",
            "aws_subnet.main-public-1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.template_cloudinit_config.cloudinit-jenkins",
            "aws_iam_role.jenkins-role",
            "aws_key_pair.mykeypair",
            "data.template_file.jenkins-init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:internet-gateway/igw-043f9da9fdf72ab92",
            "id": "igw-043f9da9fdf72ab92",
            "owner_id": "721151659829",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:route-table/rtb-02f637a48ba3138df",
            "id": "rtb-02f637a48ba3138df",
            "owner_id": "721151659829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043f9da9fdf72ab92",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "tags_all": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea276f44cac7febe",
            "route_table_id": "rtb-02f637a48ba3138df",
            "subnet_id": "subnet-05ecd3731df1dc58e"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc596e235daa54d6",
            "route_table_id": "rtb-02f637a48ba3138df",
            "subnet_id": "subnet-09edfe70d56e63315"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae765861cfa68d93",
            "route_table_id": "rtb-02f637a48ba3138df",
            "subnet_id": "subnet-002f43d81b9632ba1"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:security-group/sg-0c343c4c078f606ed",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c343c4c078f606ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-securitygroup",
            "name_prefix": "",
            "owner_id": "721151659829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-securitygroup"
            },
            "tags_all": {
              "Name": "app-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:security-group/sg-0d4e9794fd1017830",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4e9794fd1017830",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-securitygroup",
            "name_prefix": "",
            "owner_id": "721151659829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-securitygroup"
            },
            "tags_all": {
              "Name": "jenkins-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:subnet/subnet-02d148e108cd307d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-02d148e108cd307d3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721151659829",
            "tags": {
              "Name": "main-private-1"
            },
            "tags_all": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:subnet/subnet-0c20bb43c0b099735",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0c20bb43c0b099735",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721151659829",
            "tags": {
              "Name": "main-private-2"
            },
            "tags_all": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:subnet/subnet-006ea88cac10bdd57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-006ea88cac10bdd57",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721151659829",
            "tags": {
              "Name": "main-private-3"
            },
            "tags_all": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:subnet/subnet-05ecd3731df1dc58e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05ecd3731df1dc58e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721151659829",
            "tags": {
              "Name": "main-public-1"
            },
            "tags_all": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:subnet/subnet-09edfe70d56e63315",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09edfe70d56e63315",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721151659829",
            "tags": {
              "Name": "main-public-2"
            },
            "tags_all": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:subnet/subnet-002f43d81b9632ba1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-002f43d81b9632ba1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721151659829",
            "tags": {
              "Name": "main-public-3"
            },
            "tags_all": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-09a80bd83e8a39b5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:721151659829:vpc/vpc-09a80bd83e8a39b5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bac6425a1301b61b",
            "default_route_table_id": "rtb-01017b0171937c106",
            "default_security_group_id": "sg-0d5559e0fc4ae0111",
            "dhcp_options_id": "dopt-64524f02",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a80bd83e8a39b5d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01017b0171937c106",
            "owner_id": "721151659829",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}